src/test/deca/context/invalid/created/test-a-10.deca
class A{
    protected int x;
    protected float y;
}

class B{
    int z;
    int w;
    void SetX(){
        x = z;
    }
    void setY(){
        y = w;
    }
}